@@ -22,29 +22,42 @@
 ( function( window ) {
     'use strict';
 
-    var futoin = window.FutoIn || {};
+    var futoin = window.FutoIn || window.futoin || {};
 
     if ( typeof futoin.Invoker === 'undefined' )
     {
         var FutoInInvoker = require( './invoker' );
+        var SimpleCCM = FutoInInvoker.SimpleCCM;
+        var AdvancedCCM = FutoInInvoker.AdvancedCCM;
+
 
         /**
          * **window.SimpleCCM** - Browser-only reference to futoin-asyncsteps.SimpleCCM
          * @global
          * @name window.SimpleCCM
          */
-        var SimpleCCM = FutoInInvoker.SimpleCCM;
-
         window.SimpleCCM = SimpleCCM;
+
+        /**
+         * **futoin.SimpleCCM** - Browser-only reference to futoin-asyncsteps.SimpleCCM
+         * @global
+         * @name futoin.SimpleCCM
+         */
+        futoin.SimpleCCM = SimpleCCM;
 
         /**
          * **window.AdvancedCCM** - Browser-only reference to futoin-asyncsteps.AdvancedCCM
          * @global
          * @name window.AdvancedCCM
          */
-        var AdvancedCCM = FutoInInvoker.AdvancedCCM;
-
         window.AdvancedCCM = AdvancedCCM;
+
+        /**
+         * **futoin.AdvancedCCM** - Browser-only reference to futoin-asyncsteps.AdvancedCCM
+         * @global
+         * @name futoin.AdvancedCCM
+         */
+        futoin.AdvancedCCM = AdvancedCCM;
 
         /**
          * **futoin.Invoker** - Browser-only reference to futoin-invoker module
@@ -61,12 +74,10 @@
         window.FutoInInvoker = FutoInInvoker;
 
         window.FutoIn = futoin;
+        window.futoin = futoin;
+    }
 
-        if ( typeof module !== 'undefined' )
-        {
-            module.exports = FutoInInvoker;
-        }
-    } else if ( typeof module !== 'undefined' ) {
+    if ( typeof module !== 'undefined' ) {
         module.exports = futoin.Invoker;
     }
 } )( window );
