@@ -1,4 +1,3 @@
-
 /**
  * @file
  *
@@ -18,18 +17,34 @@
  * limitations under the License.
  */
 
+
 ( function( window ) {
     'use strict';
 
-    /**
-     * **window.SimpleCCM** - Browser-only reference to futoin-asyncsteps.SimpleCCM
-     * @global
-     * @name window.SimpleCCM
-     */
-    window.SimpleCCM = require( '../SimpleCCM' );
+    var futoin = window.FutoIn || window.futoin || {};
 
-    if ( module )
+    if ( typeof futoin.Invoker === 'undefined' )
     {
-        module.exports = { SimpleCCM: window.SimpleCCM };
+        var SimpleCCM = require( '../SimpleCCM' );
+
+        /**
+         * **window.SimpleCCM** - Browser-only reference to futoin-asyncsteps.SimpleCCM
+         * @global
+         * @name window.SimpleCCM
+         */
+        window.SimpleCCM = SimpleCCM;
+
+        futoin.SimpleCCM = SimpleCCM;
+
+        window.FutoIn = futoin;
+        window.futoin = futoin;
+
+        futoin.Invoker = {
+            SimpleCCM: SimpleCCM,
+        };
     }
-} )( window ); // jshint ignore:line
+
+    if ( typeof module !== 'undefined' ) {
+        module.exports = futoin.Invoker;
+    }
+} )( window );
